test/banana/typeck/should_pass/component_param_has_a_type.banana
a = IPTablesSource(sleep=0.01)
b = a.sleep
# TYPE_TABLE_EQ {Ident< a >: IPTablesSource(sleep=TypeNumber), Ident< b >: TypeNumber}