test/banana/typeck/should_fail/wrong_param_type.banana
a = IPTablesSource(sleep="foobar")

# NEW_TEST

a = IPTablesSource(sleep={})

# RAISE BananaArgumentTypeError